Atualizações da página inicial

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre nós</a></li>
           <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfólio</a></li>
+          <li><a class="nav-link scrollto " href="#testimonials">Nossos Clientes</a></li>
           <!--<li><a class="nav-link scrollto" href="#team">Team</a></li>-->
           <!--
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -89,7 +89,7 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Soluções poderosas!<span></span></h1>
+          <h1>Soluções inteligentes!<span></span></h1>
           <h2>Com uma equipe preparada e pronta para te ajudar.</h2>
         </div>
       </div>
@@ -116,13 +116,13 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Eletrônica</a></h3>
+            <h3><a href="">Radiocomunicação</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-cloud-fill"></i>
-            <h3><a href="">Controle Inteligente</a></h3>
+            <h3><a href="">Suporte em TI</a></h3>
           </div>
         </div>
       </div>
@@ -141,19 +141,19 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Bem-vindo à Amarantec, onde a inovação e a excelência se encontram para criar experiências excepcionais.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Fundada em 2018, nossa empresa tem se dedicado a trazer as melhores soluções aos nossos clientes.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="ri-check-double-line"></i> Soluções inteligentes para facilitar o dia-a-dia da sua empresa.</li>
+              <li><i class="ri-check-double-line"></i> Profissionais que entendem suas necessidades, prontos para levar o melhor até você.</li>
+              <li><i class="ri-check-double-line"></i> O melhor da tecnologia ao seu alcance, de maneira rápida e eficiente.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+              Junte-se a nós na jornada de trazer às pessoas o melhor da tecnologia e tudo de bom que ela oferece. 
+              Na Amarantec, estamos comprometidos em criar um impacto positivo, e cada cliente é uma parte vital dessa jornada.
+              Obrigado por escolher Amarantec.
             </p>
           </div>
         </div>
@@ -291,7 +291,9 @@
       </div>
     </section><!-- End Cta Section -->
 
+   
     <!-- ======= Portfolio Section ======= -->
+     <!--
     <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
@@ -442,7 +444,9 @@
         </div>
 
       </div>
+      -->
     </section><!-- End Portfolio Section -->
+  
 
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts">
