Atualizações de favicon e diversas na página inicial

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre nós</a></li>
           <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
-          <li><a class="nav-link scrollto " href="#testimonials">Nossos Clientes</a></li>
+          <!--<li><a class="nav-link scrollto " href="#testimonials">Nossos Clientes</a></li>-->
           <!--<li><a class="nav-link scrollto" href="#team">Team</a></li>-->
           <!--
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -190,22 +190,22 @@
           <div class="image col-lg-6" style='background-image: url("assets/img/features.jpg");' data-aos="fade-right"></div>
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-receipt"></i>
+              <i class="bi bi-speedometer2"></i>
               <h4>Soluções ágeis</h4>
               <p>O tempo é um recurso valioso, e valorizamos isso.</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-cube-alt"></i>
+              <i class="bi bi-boxes"></i>
               <h4>Tecnologia</h4>
               <p>Em constante desenvolvimento para atender as demandas crescentes do mercado.</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-images"></i>
+              <i class="bi bi-chat-left-heart"></i>
               <h4>Você nos inspira</h4>
               <p>Com a cultura do feedback constante, deselvolvemos soluções personalizadas.</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-shield"></i>
+              <i class="bi bi-house-heart"></i>
               <h4>Mais que um cliente</h4>
               <p>Faça parte do nosso ecossistema! Você é vital para nós!</p>
             </div>
@@ -227,7 +227,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"><i class="bi bi-gear"></i></div>
               <h4><a href="">Desenvolvimento e prototipação</a></h4>
               <p>Desenvolvimento de sistemas embarcados, placas eletrônicas e protótipos em geral. Desde o projeto até a instalação.</p>
             </div>
@@ -235,7 +235,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-radio"></i></div>
               <h4><a href="">Radiocomunicação</a></h4>
               <p>Projeto, instalação e manutenção de sistemas de rádiocomunicação.</p>
             </div>
@@ -243,15 +243,15 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bi bi-shop"></i></div>
               <h4><a href="">Sistemas Web</a></h4>
-              <p>Seu site desenvolvido com as tecnologias mais recentes. Sistemas completos, responsivos e com desempenho otimizado.</p>
+              <p>O site do seu negócio desenvolvido com as tecnologias mais recentes. Sistemas completos, responsivos e com desempenho otimizado.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon"><i class="bi bi-house-gear"></i></div>
               <h4><a href="">Controle de acesso</a></h4>
               <p>Projeto e instalção de controles de acesso inteligentes, com gerenciamento em nuvem.</p>
             </div>
@@ -259,7 +259,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <div class="icon"><i class="bi bi-pc-display-horizontal"></i></div>
               <h4><a href="">Suporte em TI</a></h4>
               <p>Deixe sua infra-estrutura de TI com a gente. Suporte help-desk de hardware e software.</p>
             </div>
@@ -267,7 +267,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
+              <div class="icon"><i class="bi bi-qr-code"></i></div>
               <h4><a href="">Soluções em IoT</a></h4>
               <p>Projetos IoT para monitoramento de ativos da sua empresa.</p>
             </div>
@@ -284,8 +284,8 @@
 
         <div class="text-center">
           <h3>Prontos para inovar!</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <p>Inovando constantemente, transformando ideias criativas em soluções práticas que impulsionam o futuro.</p>
+          <a class="cta-btn" href="#contact">Fale conosco!</a>
         </div>
 
       </div>
@@ -449,6 +449,7 @@
   
 
     <!-- ======= Counts Section ======= -->
+    <!--
     <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
@@ -493,14 +494,14 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End .content-->
-          </div>
+            </div>
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
-
-    <!-- ======= Testimonials Section ======= -->
+    </section>
+  -->
+    <!--======= Testimonials Section =======-->
+    <!--
     <section id="testimonials" class="testimonials">
       <div class="container" data-aos="zoom-in">
 
@@ -518,7 +519,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -531,7 +532,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -544,7 +545,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -557,7 +558,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -570,14 +571,14 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
     </section><!-- End Testimonials Section -->
-
+  -->
     <!-- ======= Team Section ======= -->
     <!--
     <section id="team" class="team">
@@ -668,6 +669,7 @@
     </section><!-- End Team Section -->
   -->
     <!-- ======= Contact Section ======= -->
+    <!---->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
@@ -689,8 +691,8 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4>Endereço:</h4>
+                <p>Avenida Presidente Vargas, Centro, RJ</p>
               </div>
 
               <div class="email">
@@ -701,8 +703,8 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4>Telefone:</h4>
+                <p>+55 21 2222-3333</p>
               </div>
 
             </div>
@@ -752,11 +754,11 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Empresa<span>.</span></h3>
+              <h3>Amarantec<span></span></h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
+                Avenida Presidente Vargas<br>
+                Centro - RJ - Brazil<br><br>
+                <strong>Telefone:</strong> +55 21 2222-3333<br>
                 <strong>Email:</strong> info@example.com<br>
               </p>
               <div class="social-links mt-3">
@@ -770,32 +772,32 @@
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Links úteis</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Sobre nós</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Serviços</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Termos de serviço</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Política de privacidade</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Nossos serviços</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Desenvolvimento e prototipação</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Soluções</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Sistemas Web</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Controle de acesso</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Suporte em TI</a></li>
             </ul>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Nossa Newsletter</h4>
+            <p>Receba nossas novidades e lançamentos.</p>
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input type="email" name="email"><input type="submit" value="Inscrever-se">
             </form>
 
           </div>
