Atualizações de favicon e diversas na página inicial

--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Sobre nós</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Serviços</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Serviços</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Termos de serviço</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Política de privacidade</a></li>
             </ul>
@@ -785,11 +785,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Nossos serviços</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Desenvolvimento e prototipação</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Soluções</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Sistemas Web</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Controle de acesso</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Suporte em TI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Desenvolvimento e prototipação</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Soluções em IoT</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Sistemas Web</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Controle de acesso</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Suporte em TI</a></li>
             </ul>
           </div>
           
