--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>amarantec.mei@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -759,7 +759,7 @@
                 Avenida Presidente Vargas<br>
                 Centro - RJ - Brazil<br><br>
                 <strong>Telefone:</strong> +55 21 2222-3333<br>
-                <strong>Email:</strong> info@example.com<br>
+                <strong>Email:</strong> amarantec.mei@gmail.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
