--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Radiocomunicação</a></h3>
+            <i class="bi bi-reception-4"></i>
+            <h3><a href="">Rádio Comunicadores</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
@@ -235,8 +235,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-radio"></i></div>
-              <h4><a href="">Radiocomunicação</a></h4>
+              <div class="icon"><i class="bi bi-reception-4"></i></div>
+              <h4><a href="">Rádio Comunicadores</a></h4>
               <p>Projeto, instalação e manutenção de sistemas de rádiocomunicação.</p>
             </div>
           </div>
@@ -796,7 +796,7 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Nossa Newsletter</h4>
             <p>Receba nossas novidades e lançamentos.</p>
-            <form action="" method="post">
+            <form action="#" method="#">
               <input type="email" name="email"><input type="submit" value="Inscrever-se">
             </form>
 
